--- a/locales/hi.json
+++ b/locales/hi.json
@@ -139,5 +139,6 @@
 	"hours": "घंटे",
 	"minutes": "मिनट",
 	"seconds": "सेकंड",
-	"<a class=\"\" href=\"/\">Click Here</a> to go back to home page": "अपने होम पेज पर जाने के लिए <a class=\"\" href=\"/\">यहाँ क्लिक</a> करें"
+	"<a class=\"\" href=\"/\">Click Here</a> to go back to home page": "अपने होम पेज पर जाने के लिए <a class=\"\" href=\"/\">यहाँ क्लिक</a> करें",
+	"You have contributed <b><span id=\"user-contribution\"></span></b><b><span> recordings</span></b> of your voice": "आपने अपनी आवाज़ की <b><span id=\"user-contribution\"></span></b><b><span> रिकॉर्डिंग</span></b> में योगदान दिया है"
 }
