--- a/locales/sa.json
+++ b/locales/sa.json
@@ -1,8 +1,126 @@
 {
-    "hrs recorded in": "hrs recorded in", 
-    "hrs validated in": "hrs validated in",
-    "hours": "hours",
-    "minutes": "minutes", 
-    "seconds": "seconds",
-    "Know More": "વધુ જાણો"
+	"hrs recorded in": "%hours घण्टा: ध्वनिमुद्रिता: %language भाषायाम्",
+	"hrs validated in": "%hours घण्टा: प्रमाणीकृता: %language भाषायाम्",
+	"hours": "घण्टाः",
+	"minutes": "निमेषा:",
+	"seconds": "seconds",
+	"Language": "भाषा:",
+	"Speech Recognition Models": "Speech Recognition Models",
+	"About Us": "अस्मत्विषये",
+	"Select the language for contribution": "सहाभागार्थं  भाषां चिनोतु |",
+	"Show All": "Show All",
+	"Say": "वदतु",
+	"Contribute Your Voice": "भवत: वाण्या: अंशदानं यच्छतु |",
+	"Contribute your voice to create an open data repository of Indian languages": "भारतीय-भाषाणां मुक्त-दत्तांश-कोशस्य निर्माणार्थं भवत: वाण्या: अंशदानं यच्छतु |",
+	"Listen": "श्रुणोतु",
+	"Verify What They Say": "तेषां वक्तव्यं प्रमाणीकरोतु |",
+	"Help us by validating the voice samples that others have contributed": "अंशदानार्थं यानि अन्येषां ध्वनि-प्रतीरूपाणि सन्ति तेषां प्रमाणीकरणार्थं साहाय्यं करोतु |",
+	"Vakyansh: A crowdsourcing initiative for Indian languages": "वाक्यांश:  :  भारतीय-भाषाभ्य: संमर्दोद्गम-उपक्रम:",
+	"For the development of speech recognition models in Indian languages, there is a need for an open data repository of diversified Indian voices. Vakyansh invites you to reach out and contribute your voice to create a diverse open data repository of Indian voices.": " भारतीयभाषासु भाषण-अभिज्ञान-आदर्शाणां   विकासार्थं, वैविध्यपूर्ण-भारतीय-ध्वनीनां मुक्त-दत्तांश-कोशस्य आवश्यकता अस्ति | मुक्त-दत्तांश-कोश-निर्माणाय वाक्यांश: भवन्तं सह्भागार्थं भवत: ध्वने: अंशदानार्थं च निमन्त्रयति |",
+	"Know More": "अधिकं जानीताम् |",
+	"We rely on your contributions": "भवत: अंशदानेषु विश्वसाम: |",
+	"The key to building speech recognition models, lies in the diversity of the data that you provide by contributing across states, dialects, accents, gender and age group. The magnitude of this diversity across the nation, gives us collective strength in empowering our languages.": "भाषण-अभिज्ञान-आदर्श-निर्माणाय महत्त्वपूर्णं भवति दत्तांशस्य विविधता यत् भवान् कल्पयति अंशदानेन  राज्येषु, भाषासु, स्वरेषु वयोवर्गेषु च | राष्ट्रे अस्या: विविधताया: परिमाणं अस्मभ्यं ददाति सामूहिक-बलं अस्माकं भाषाणां सक्षमीकरणाय |",
+	"languages contributed": "अंशदत्ता: भाषा:",
+	"speakers contributed": "अंशदत्तवन्तः वक्तार:",
+	"hours recorded": "ध्वनिमुद्रितानि घण्टानि",
+	"Top Languages": "शिखर-भाषा:",
+	"By hours of data contributed": "अंशदत्त-दत्तांशस्य घण्टाः",
+	"By number of speakers": "वक्तृ-सङ्ख्याभिः",
+	"VIEW ALL DETAILS": "सर्व-विवरणानि पश्यतु",
+	"Speaker Details": "वक्तृ-विवरणम्",
+	"All the fields are optional": "सर्वाणि क्षेत्राणि सविकल्पानि",
+	"Not You? Change User": "नास्ति भवान् /भवती ? परिवर्तताम् उपभोक्तारम्  |",
+	"Username": "उपभोक्तृ-नाम",
+	"Enter preferred username": "विशेषितम् उपभोक्तृ-नाम प्रविशतु  |",
+	"Username cannot be more than 12 characters": "Username cannot be more than 12 characters",
+	"Please don't use email or mobile number as user name": "Please don't use email or mobile number as user name",
+	"Mother Tongue": "मातृभाषा",
+	"Select Mother Tongue": "मातृभाषां चिनोतु |",
+	"Age Group": "वयोवर्ग:",
+	"Select Age Group": "वयोवर्गं चिनोतु",
+	"Gender": "लिङ्गम्",
+	"Male": "पुरुष:",
+	"Female": "महिला",
+	"Others": "अन्य:",
+	"I have read and agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions </a>": "मया <a href=\"/terms-and-conditions\">समया:</a> पठिता: अङ्गीकृताः च |",
+	"LET'S GO": "चलेम |",
+	"Hide details": "विवरणं वृणोतु",
+	"Select Your Preferred Language": "भवत: विषेशितां  भाषां चिनोतु |",
+	"Terms & Conditions": "समया:",
+	"Privacy Policy": "गुह्यता-नीति:",
+	"An open data strategy will enable the various language communities, individuals and technologists, who are passionate about their language, to develop speech recognition applications, and integrate them in various domains for the good of the community.": " मुक्त-दत्तांश-नीति: विविध-भाषा-समुदायान्, व्यक्तीन् तन्त्रज्ञान् च सशक्तीकरोति ये तेषां भाषां प्रति, भाषण-अभिज्ञान-अनुप्रयोग-विकासं प्रति, समुदायस्य कल्याणाय विविध-कार्यक्षेत्रेषु तेषां एकीकरणाय उत्कटा: |",
+	"Our multilingual DNA is still a missing piece in digital first strategy": "अङ्कीय-प्रथम-नीत्याम् अस्माकं बहुभाषिक-DNA अद्यापि सम्यक्स्थानं न प्राप्तम् |",
+	"India being a vast multilingual country, 90% of India’s population relies on regional languages to conduct their educational, social & digital activities.": "भारत: सन् व्यापक-बहुभाषिक-देश:, भारतस्य लोकसङ्ख्यायाः ९० प्रतिशत: प्रादेशिक-भाषासु विश्वसति तेषां शैक्षणिकानां, सामाजिकानां, अङ्कीयानां  च गतिविधीनां कृते |",
+	"As the volume of internet users multiplies and there is a demand to access digital platforms for financial, educational and economic activities, there is a need to start thinking Indian languages first.": "अन्तर्जाल-उपभोक्तृनां राशि: यदा गुणयति एव, आर्थिकान् शैक्षणिकान् च  अङ्कीय-मञ्चान् प्रति अभिगमाय अभियाचना भवति, भारतीय-भाषा: अवश्यं चिन्तनीया: प्रथमम् |",
+	"Winning back our languages by introducing localization in our ecosystem": "अस्माकं पारिस्थितीकी-तन्त्रे स्थानिकीकरणस्य प्रारंभेन अस्माकं भाषाणां यशस्विता",
+	"There is a felt need for a speech recognition technology that specializes in Indian languages, that meets a high accuracy bar and is closer to the daily language and communication functions of users of diverse Indian languages.": "भाषण-अभिज्ञान-तन्त्रस्य आवश्यकता वर्तते यस्य भारतीय-भाषासु विशेषता भवति, यत् शुद्धता-मानकात् तुल्यं, आपि च भवति समीपे दैनिक-भाषाया: च विविध-भारतीय-भाषाणां उपभोक्तृणां सञ्चार-कार्याणाम्  च |",
+	"Speech recognition is a technology that converts speech to real-time text. Such a model for Indian languages has the potential to become a building block to a digital first model, in various sectors, such as, education, healthcare and media.": "भाषण-अभिज्ञान भवति तन्त्रं यत् भाषणं  यथार्थे  पाठ्ये परिवर्तते |भारतीय-भाषाणां कृते एवामादर्श: भवति शिला-निर्माणं अङ्कीय-प्रथम-प्रारूपे विविध-क्षेत्रेषु आरोग्यशिक्षणप्रसारादिषु |",
+	"The tools, utilities and models proposed to be developed will rely on open source contributions through Vakyansh crowd sourcing platform.": "साधनानि, सहायविधय: प्रारूपाणि च ये विकसिता: भविष्यन्ति, मुक्त-स्रोत-सहभागे विश्वसन्ति वाक्यांश-संमर्दोद्गम-मञ्चस्य द्वारा |",
+	"Crowd Sourcing & your contribution": "संमर्दोद्गम: भवत: अंशदानं च",
+	"Speech recognition relies on \"machine-learning\" technology that requires huge collections of datasets that include diversified Indian voices and the corresponding text. Through Vakyansh, EkStep wants to create a diverse open repository of Indian voice speaking Indian language which can be used for this initiative.": "भाषण-अभिज्ञानं विश्वसति \"यन्त्र-शिक्षण\" तन्त्रे यस्य कृते आवश्यकता भवति महतां  दत्तांश-सञ्च-सङ्ग्रहाणां  येषु सन्ति वैविध्यपूर्णा: ध्वनय: तदनुरूप-पाठ्यानि च | वाक्यांशस्य द्वारा एक-स्टेप-प्रतिष्ठानं निर्मातुमिच्छति भारतीय-भाषा-वदन्त: भारतीय-ध्वनीनां  वैविध्यपूर्ण-मुक्त-कोशं यस्य उपयोगं शक्यम् अस्मिन् उपक्रमे |",
+	"This is where you come in.": "अत्र भवान् प्रविशति |",
+	"As a team, we are inviting you to join us and contribute upto 30 minutes of your voice to this initiative. Recording your voice at one stretch might be overwhelming and hence, we have created leaner measures on our website, for you to visit us multiple times and commence from where you left us off.": "सङ्घमिव भूत्वा, भवन्तं निमन्त्रयामहे ३० निमेषा: पर्यन्तं भवत: ध्वने: अंशदानार्थं अस्य उपक्रमस्य कृते | एकस्मिन् समये एव   भवत: ध्वने : मुद्रणं कदाचित् अत्यधिकं भवितुं शक्नोति अत: भवत्कृते अस्माकं सङ्केत-स्थले लघूपाया: निर्मिता: येन भवान् तत्र नैकवारं गत्वा पूर्वे  यस्मात् निर्गता: तत्स्थानादेव आरब्धुं शक्नोति |",
+	"Every minute of your contribution will make a huge difference and bring us closer to our objective.": "भवत: अंशदानस्य प्रत्येक-निमेष: अतीव परिणामकारक: अस्माकं ध्येयस्य समीपे नयति |",
+	"Select language": "भाषां चिनोतु",
+	"START RECORDING": "ध्वनिमुद्रणम् आरभताम्",
+	"ABOUT THE ORGANISATION": "संस्थाविषये",
+	"EkStep Foundation": "एक-स्टेप-प्रतिष्ठानम्",
+	"EkStep Foundation gathers partners and creates open infrastructure, tools and frameworks to solve complex societal problems at scale. We do this by leveraging the open source digital infrastructure we have created called Sunbird and by following a way of thinking and doing called the Societal Platform Approach.": "एक-स्टेप-प्रतिष्ठानम् सहभागिन: प्रचिनोति  जटिल-सामाजिक-प्रश्नानां समाधानाय  मुक्त-संरचनाया:, साधनानां, रचनानां च  निर्माणं करोति च |अस्मत्कृतेन मुक्त-संरचनाया: लाभेन सनबर्ड इत्यनेन वयमेतत् कुर्म: अपि च  सामाजिक-मञ्च-उपगम: इति नाम्ना कृति-चिन्तनयो: मार्गमनुसृत्य |",
+	"EkStep is a not-for-profit organization founded by Rohini and Nandan Nilekani and Shankar Maruwada.": "एक-स्टेप-प्रतिष्ठानं  वर्तते लाभरहित-संस्था स्थापिता रोहिणी-नन्दन-नीलेकणी महोदयाभ्यां तथा शङ्करमारूवाडामहोदयेन च |",
+	"Select the language": "भाषां चिनोतु",
+	"All Languages": "सर्वभाषा:",
+	"Data Last Updated": "पूर्व-नवीकृत: दत्तांश:",
+	"We do not have any data for this language, would you like to contribute for it?": "We do not have any data for this language, would you like to contribute for it?",
+	"Contribute Now": "Contribute Now",
+	"hours validated": "hours validated",
+	"Progress Chart": "प्रगते: काल-रेखा",
+	"Monthly": "Monthly",
+	"Quarterly": "Quarterly",
+	"Gender Contribution": "लिङ्ग-अंशदानम्",
+	"State Wise distribution": "राज्यानुसार विभाग:",
+	"Age Group Distribution": "वयोवर्ग-विभाग:",
+	"Let's get started!": "आरंभं कुर्यु:",
+	"Recording will automatically stop after <span id=\"counter\"></span> seconds": "Recording will automatically stop after <span id=\"counter\"></span> seconds",
+	"Audio recording is too small. Please Re-record": "ध्वनिमुद्रणं लघुतरम् | पुनर्मुद्रणं करोतु |",
+	"SKIP": "प्लवताम्",
+	"STOP RECORDING": "मुद्रणं विरमतु",
+	"RE-RECORD": "पुन: मुद्रणं करोतु",
+	"NEXT": "अग्रिम:",
+	"Recording Instructions": "ध्वनिमुद्रणाय सूचना:",
+	"Please test your <b>microphone</b>": "कृपया भवत: ध्वनिवर्धकं परीक्षताम्",
+	"Please test your <b>speakers</b>": "कृपया भवत: भाषकान् परीक्षताम्",
+	"Ensure there is <b>no background noise</b>": "पार्श्वभागे किंशब्दं नास्ति इति निश्चितीकरोतु",
+	"Get comfortable with the prompted text, before recording, by <b>reading it aloud</b>": "मुद्रणात् प्राक् उच्चैः पठित्वा संसूचित-पाठ्यं सह सुस्थितं भवतु",
+	"Get started by clicking on <b>Record</b> button": "मुद्रण-कुञ्जिकां क्लिक्-कृत्वा आरभताम्",
+	"START": "आरभताम्",
+	"Error!!!": "दोष: |",
+	"An unexpected error occured while processing your request. Please try after some time.": "भवत: प्रार्थनाया: संसाधने अनपेक्षित: दोष: समुत्पन्न: | कृपया किञ्चित्कालानन्तरं पुन: प्रयतताम् |",
+	"Close": "Close",
+	"Thank you for contributing!": "अंशदानाय धन्यवादा:",
+	"You have contributed <b><span id=\"user-contribution\"></span></b><b><span> recordings</span></b> of your voice": "You have contributed <b><span id=\"user-contribution\"></span></b><b><span> recordings</span></b> of your voice",
+	"We know you can do more!": "जानीम: यत् भवान् अधिकं कर्तुं शक्नोति |",
+	"Contribute More": "अधिकम् अंशदानम् करोतु",
+	"Share it with your friends and family": "भवत: मित्रैः परिवारेण च सह तत् प्रसरतु |",
+	"Instructions": "सूचना:",
+	"Thank you for your enthusiasm to validate the voice samples": "ध्वनि-प्रतिरूपाणां प्रमाणीकरणाय भवत: उत्साहार्थं धन्यवादा: |",
+	"We have recently commenced the data contribution journey for <span id=\"spn-validation-language\"></span> language and hope that very soon there will be voice samples collected for your validation.": "इदानीमेव वयं <span id=\"spn-validation-language\"></span> भाषायै दत्तांश-अंशदान-प्रवासं आरभामहे  आशंसामहे च यत् शीघ्रं ध्वनि-प्रतिरूपाणि सङ्ग्रहितानि भविष्यन्ति भवत: प्रमाणीकरणकृत्यर्थम् |",
+	"Would you also like to contribute your voice?": "अपी भवान् स्वस्य ध्वने: अंशदानार्थं विशति ?",
+	"Start Contributing": "इति भाषायाम् अंशदानम् आरभताम्  |",
+	"Thank you for validating!": "प्रमाणीकरणार्थं धन्यवादा: !",
+	"You have helped us validate <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> recordings": "You have helped us validate <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> recordings",
+	"Validate More": "अधिकानि प्रमाणीकरोतु",
+	"Incorrect": "Incorrect",
+	"Play": "क्रीडतु",
+	"Replay": "पुन: क्रीडतु",
+	"Pause": "Pause",
+	"Correct": "Correct",
+	"Skip": "प्लवताम्",
+	"Validating Instructions": "प्रमाणीकरणाय सूचना:",
+	"Ensure the voice is <b>clear and audible</b>": "ध्वनि: स्पष्ट: श्रवणीय: च भवति इति निश्चितं करोतु",
+	"Match the voice to the text <b>accurately</b>": "ध्वनि: पाठ्यं  सह तोलयतु",
+	"If you are unsure of the match, skip the particular voice sample": "यदि तोलनं  न योग्यं, तत् ध्वनि-प्रतिरूपं  क्षिपताम्",
+	"Oops": "Oops",
+	"Page Not Found": "पृष्ठं न लब्धम्  |",
+	"Looks like you have taken a wrong turn here": "भवता  अत्र अनुचितं वर्तनं कृतम् इव भासते  |",
+	"<a class=\"\" href=\"/\">Click Here</a> to go back to home page": "पुन: मूलपृष्ठं गन्तुं अत्र <a class=\"\" href=\"/\">क्लिक्-करोतु |</a>"
 }
