|Sreejith| Add partial translation for konkani DV

--- a/locales/kd.json
+++ b/locales/kd.json
@@ -1,1 +1,117 @@
-{}
+{
+	"Language": "Language",
+	"Speech Recognition Models": "Speech Recognition Models",
+	"About Us": "About Us",
+	"Select the language for contribution": "Select the language for contribution",
+	"Show All": "Show All",
+	"Say": "म्हणात", 
+	"Contribute Your Voice": "तुमच्या आवाजाचे योगदान दियात",
+	"Contribute your voice to create an open data repository of Indian languages": "भारतीय भासांचो मुक्त माहितीसाठो तयार करपाखातीर तुमच्या आवाजाचे योगदान दियात",
+	"Listen": "आयकात",
+	"Verify What They Say": "ते किदे म्हणतात ते वैध करात",
+	"Help us by validating the voice samples that others have contributed": "हेरांनी योगदान दिल्ल्या आवाजाच्या नमुन्यांक वैध करून आमका मदत करात",
+	"Vakyansh: A crowdsourcing initiative for Indian languages": "वाक्यांश - भारतीय भाशांखातीर जनसहभागी उपक्रम",
+	"For the development of speech recognition models in Indian languages, there is a need for an open data repository of diversified Indian voices. Vakyansh invites you to reach out and contribute your voice to create a diverse open data repository of Indian voices.": "भारतीय भासांभीतर उलोवप वळखुपी नमुने विकसित करपाखातीर, विंगडविंगड भारतीय आवाजांचो मुक्त माहितीसाठो गरजेचो आसा. वाक्यांश तुमका भारतीय आवाजांचो व्यापक मुक्त माहितीसाठो तयार करपाखातीर मुखार सरून तुमच्या आवाजाचे योगदान दिवपाखातीर निमंत्रित करता.भारतीय भासांभीतर उलोवप वळखुपी नमुने विकसित करपाखातीर, विंगडविंगड भारतीय आवाजांचो मुक्त माहितीसाठो गरजेचो आसा. वाक्यांश तुमका भारतीय आवाजांचो व्यापक मुक्त माहितीसाठो तयार करपाखातीर मुखार सरून तुमच्या आवाजाचे योगदान दिवपाखातीर निमंत्रित करता.",
+	"Know More": "अदिक जाणून घेयात",
+	"We rely on your contributions": "तुमच्या योगदानाचेर आमी अवलंबून आसात",
+	"The key to building speech recognition models, lies in the diversity of the data that you provide by contributing across states, dialects, accents, gender and age group. The magnitude of this diversity across the nation, gives us collective strength in empowering our languages.": "आवाज वळखुपी नमुने तयार करपाची चावी तुमी विंगडविंगड राज्यां, बोली, उच्चार, लिंग आणि वयोगटांनी दिता त्या योगदानाच्या माहितीच्या विविधतायेंत आसा. देशभरांतल्या ह्या विविधतायेचे प्रमाण आमका आमच्यो भाशा सशक्त करपाखातीर सामूहिक शक्त दितात.",
+	"languages contributed": "languages contributed",
+	"speakers contributed": "योगदान दिल्ल्यो भाशा",
+	"hours recorded": "योगदान दिल्ले उलोवपी",
+	"Top Languages": "वरां ध्वनिमुद्रित",
+	"By hours of data contributed": "योगदान दिल्ली माहिती वरांनी",
+	"By number of speakers": "उलोवप्यांच्या संख्येप्रमाण",
+	"VIEW ALL DETAILS": "सगळो तपशील पळयात",
+	"Speaker Details": "Speaker Details",
+	"All the fields are optional": "All the fields are optional",
+	"Not You? Change User": "Not You? Change User",
+	"Username": "Username",
+	"Enter preferred username": "Enter preferred username",
+	"Username cannot be more than 12 characters": "Username cannot be more than 12 characters",
+	"Please don't use email or mobile number as user name": "Please don't use email or mobile number as user name",
+	"Mother Tongue": "Mother Tongue",
+	"Select Mother Tongue": "Select Mother Tongue",
+	"Age Group": "Age Group",
+	"Select Age Group": "Select Age Group",
+	"Gender": "Gender",
+	"Male": "Male",
+	"Female": "Female",
+	"Others": "Others",
+	"I have read and agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions </a>": "I have read and agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions </a>",
+	"LET'S GO": "LET'S GO",
+	"Hide details": "तपशील लिपयात",
+	"Select Your Preferred Language": "Select Your Preferred Language",
+	"Terms & Conditions": "Terms & Conditions",
+	"Privacy Policy": "Privacy Policy",
+	"Select the language": "Select the language",
+	"All Languages": "All Languages",
+	"Data Last Updated": "Data Last Updated",
+	"We do not have any data for this language, would you like to contribute for it?": "We do not have any data for this language, would you like to contribute for it?",
+	"Contribute Now": "Contribute Now",
+	"hours validated": "hours validated",
+	"Progress Chart": "Progress Chart",
+	"Monthly": "Monthly",
+	"Quarterly": "Quarterly",
+	"Gender Contribution": "Gender Contribution",
+	"State Wise distribution": "State Wise distribution",
+	"Age Group Distribution": "Age Group Distribution",
+	"An open data strategy will enable the various language communities, individuals and technologists, who are passionate about their language, to develop speech recognition applications, and integrate them in various domains for the good of the community.": "मुक्त माहितीसाठो धोरण आपापल्या भाशेविशी ध्येयवादी आशिल्ल्या विंगडविंगड भाशा समूहांक, व्यक्ती आणि तंत्रज्ञांक आवाज वळखुपी अनुप्रयोग विकसित करपाक, आणी समाजाच्या बऱ्याखातीर विंगडविंगड डोमेन्सांनी तांची एकात्मताय साधपाक सक्षम करतले.",
+	"Our multilingual DNA is still a missing piece in digital first strategy": "डिजिटल पयली धोरणांत आमचौ भौभाशिक डीएनए अजून अस्तित्वांत ना",
+	"India being a vast multilingual country, 90% of India’s population relies on regional languages to conduct their educational, social & digital activities.": "भारत हो एक भौभाशिक देश आशिल्ल्यान, भारताची 90 टक्के लोकसंख्या ही तांची शैक्षणिक, सामाजिक आणि डिजिटल कामा करपाखातीर प्रादेशिक भाशांचेर अवलंबून रावता.",
+	"As the volume of internet users multiplies and there is a demand to access digital platforms for financial, educational and economic activities, there is a need to start thinking Indian languages first.": "इंटरनेट वापरप्यांचे प्रमाण वाडटा आणी वित्तीय, शैक्षणिक आणि आर्थिक कामांखातीर डिजिटल मंचांची मागणी येता, तशी भारतीय भाशांनी पयली विचार करपाक लागपाची गरज उप्रासता.",
+	"Winning back our languages by introducing localization in our ecosystem": "आमच्या पर्यावरणीय व्यवस्थेंत स्थानिकीकरण हाडून आमच्या भाशांक परतून एक फावट जैतिवंत करूया. ",
+	"There is a felt need for a speech recognition technology that specializes in Indian languages, that meets a high accuracy bar and is closer to the daily language and communication functions of users of diverse Indian languages.": "भारतीय भाशांनी खाशेली आशिल्ल्या आवाज वळखुपी तंत्रज्ञानाची गरज आसा, जे उच्च अचुकताय साधतले आणी वेगवेगळ्या भारतीय भाशांच्या वापरप्यांच्या दिसपट्ट्या भाशिक आणी संवादाच्या कामांच्या लागी आसतले.",
+	"Speech recognition is a technology that converts speech to real-time text. Such a model for Indian languages has the potential to become a building block to a digital first model, in various sectors, such as, education, healthcare and media.": "आवाज वळखप हे तंत्रगिन्यान उलोवपाचे तत्काळ मजकुरांत रुपांतर करता. भारतीय भाशांखातीरचो असो नमुनो विंगडविंगड क्षेत्रांनी डिजिटल पयली नमुनो तयार करपाची क्षमताय बाळगिता, जशे शिक्षण, आरोग्य आणि माध्यमां.",
+	"The tools, utilities and models proposed to be developed will rely on open source contributions through Vakyansh crowd sourcing platform.": "विकसित करपा आशिल्ले साधन, सुविधा आणि नमुने वाक्यांश जनसहभागी मंचावेल्या मुक्त स्त्रोत योगदान दिवप्यांचेर अवलंबून रावतले.",
+	"Crowd Sourcing & your contribution": "जनसहभाग आणी तुमचे योगदान",
+	"Speech recognition relies on \"machine-learning\" technology that requires huge collections of datasets that include diversified Indian voices and the corresponding text. Through Vakyansh, EkStep wants to create a diverse open repository of Indian voice speaking Indian language which can be used for this initiative.": "Speech recognition relies on \"machine-learning\" technology that requires huge collections of datasets that include diversified Indian voices and the corresponding text. Through Vakyansh, EkStep wants to create a diverse open repository of Indian voice speaking Indian language which can be used for this initiative.",
+	"This is where you come in.": "हांगा तुमची मदत जाय",
+	"As a team, we are inviting you to join us and contribute upto 30 minutes of your voice to this initiative. Recording your voice at one stretch might be overwhelming and hence, we have created leaner measures on our website, for you to visit us multiple times and commence from where you left us off.": "संघ म्हणून आमी तुमका आमका सामील जावपाक आपयता आणी तुमचो 30 मिनिटांमेरेनचो आवाज ह्या उपक्रमाखातीर दिवपाचे मागता. एकाच फावट तुमचो आवाज ध्वनिमुद्रित करप कठीण जाव येता म्हणून आमी आमच्या संकेतस्थळाचेर तुमचेखातीर सोपे उपाय येवजिल्यात, जंय तुमी जाय ते फावटी येवन जंय सोपिल्ले थंयच्यान सुरवात करपाक शकतात.",
+	"Every minute of your contribution will make a huge difference and bring us closer to our objective.": "तुमच्या योगदानाचे प्रत्येक मिनिट खूप व्हड बदल घडयतले आणि आमका आमच्या उद्दिष्टालागी हाडतले.",
+	"Select language": "भास निवडात",
+	"START RECORDING": "ध्वनिमुद्रण सुरू करात",
+	"ABOUT THE ORGANISATION": "संघटनेविशीं",
+	"EkStep Foundation": "एकस्टेप फाऊंडेशन",
+	"EkStep Foundation gathers partners and creates open infrastructure, tools and frameworks to solve complex societal problems at scale. We do this by leveraging the open source digital infrastructure we have created called Sunbird and by following a way of thinking and doing called the Societal Platform Approach.": "एकस्टेप फाऊंडेशन भागीदार पुंजायता आणी घुस्पागोंदळाचे सामाजिक प्रश्र्न सोडोवपाखातीर मुक्त साधनसुविधा, साधनां आणी आराखडो तयार करता. आमी तयार केल्ली सनबर्ड ही मुक्तस्त्रोत डिजिटल साधनसुविधा वापरून आणी सोशियेटल प्लॅटफॉर्म अप्रोच नावाची विचार आणी कार्यपद्दत अनुसरून आमी हे करतात.",
+	"EkStep is a not-for-profit organization founded by Rohini and Nandan Nilekani and Shankar Maruwada.": "एकस्टेप ही नफ्याखातीर नाशिल्ली संस्था रोहिणी आणी नंदन नीलेकणी आणी शंकर मरुवाडा हाणी स्थापन केल्या.",
+	"Let's get started!": "चला, सुरू करूया",
+	"Recording will automatically stop after <span id=\"counter\"></span> seconds": "Recording will automatically stop after <span id=\"counter\"></span> seconds",
+	"Audio recording is too small. Please Re-record": "Audio recording is too small. Please Re-record",
+	"SKIP": "सोडून दियात",
+	"STOP RECORDING": "ध्वनिमुद्रण थांबयात",
+	"RE-RECORD": "परतून ध्वनिमुद्रण",
+	"NEXT": "मुखार",
+	"Recording Instructions": "ध्वनिमुद्रण सूचना",
+	"Please test your <b>microphone</b>": "Please test your <b>microphone</b>",
+	"Please test your <b>speakers</b>": "Please test your <b>speakers</b>",
+	"Ensure there is <b>no background noise</b>": "Ensure there is <b>no background noise</b>",
+	"Get comfortable with the prompted text, before recording, by <b>reading it aloud</b>": "Get comfortable with the prompted text, before recording, by <b>reading it aloud</b>",
+	"Get started by clicking on <b>Record</b> button": "Get started by clicking on <b>Record</b> button",
+	"START": "START",
+	"Error!!!": "चुकले!!!",
+	"An unexpected error occured while processing your request. Please try after some time.": "तुमच्या विनंतेचेर प्रक्रिया करतास्तना अनपेक्षित चूक घडली. उपकार करून काय वेळांत परतून यत्न करात.",
+	"Close": "बंद करात",
+	"Instructions": "Instructions",
+	"Thank you for your enthusiasm to validate the voice samples": "Thank you for your enthusiasm to validate the voice samples",
+	"We have recently commenced the data contribution journey for <span id=\"spn-validation-language\"></span> language and hope that very soon there will be voice samples collected for your validation.": "We have recently commenced the data contribution journey for <span id=\"spn-validation-language\"></span> language and hope that very soon there will be voice samples collected for your validation.",
+	"Would you also like to contribute your voice?": "Would you also like to contribute your voice?",
+	"Start Contributing": "Start Contributing",
+	"Thank you for validating!": "वैध केल्याबद्दल देव बरे करू",
+	"You have helped us validate <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> recordings": "You have helped us validate <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> recordings",
+	"Validate More": "आणीक वैध करात",
+	"Incorrect": "Incorrect",
+	"Play": "चालू करात",
+	"Replay": "परतून वाजयात",
+	"Pause": "Pause",
+	"Correct": "Correct",
+	"Skip": "सोडून दियात",
+	"Validating Instructions": "वैध करपासंबंधी सूचना",
+	"Ensure the voice is <b>clear and audible</b>": "Ensure the voice is <b>clear and audible</b>",
+	"Match the voice to the text <b>accurately</b>": "Match the voice to the text <b>accurately</b>",
+	"If you are unsure of the match, skip the particular voice sample": "If you are unsure of the match, skip the particular voice sample",
+	"Thank you for contributing!": "योगदान दिल्याबद्दल उपकारी!",
+	"You have contributed <b><span id=\"user-contribution\"></span></b><b><span> recordings</span></b> of your voice": "You have contributed <b><span id=\"user-contribution\"></span></b><b><span> recordings</span></b> of your voice",
+	"We know you can do more!": "तुमच्यान आऩीक करू येता हे आमी जाणां!",
+	"Contribute More": "आणीक योगदान दियात",
+	"Share it with your friends and family": "तुमचे इश्ट आणी परिवारांक कळीत करात"
+}
