--- a/locales/kr.json
+++ b/locales/kr.json
@@ -1,1 +1,99 @@
-{}
+{
+	"Language": "Language",
+	"Speech Recognition Models": "Speech Recognition Models",
+	"About Us": "About Us",
+	"Select the language for contribution": "Select the language for contribution",
+	"Show All": "Show All",
+	"Say": "Say",
+	"Contribute Your Voice": "Contribute Your Voice",
+	"Contribute your voice to create an open data repository of Indian languages": "Contribute your voice to create an open data repository of Indian languages",
+	"Listen": "Listen",
+	"Verify What They Say": "Verify What They Say",
+	"Help us by validating the voice samples that others have contributed": "Help us by validating the voice samples that others have contributed",
+	"Vakyansh: A crowdsourcing initiative for Indian languages": "Vakyansh: A crowdsourcing initiative for Indian languages",
+	"For the development of speech recognition models in Indian languages, there is a need for an open data repository of diversified Indian voices. Vakyansh invites you to reach out and contribute your voice to create a diverse open data repository of Indian voices.": "For the development of speech recognition models in Indian languages, there is a need for an open data repository of diversified Indian voices. Vakyansh invites you to reach out and contribute your voice to create a diverse open data repository of Indian voices.",
+	"Know More": "Know More",
+	"We rely on your contributions": "We rely on your contributions",
+	"The key to building speech recognition models, lies in the diversity of the data that you provide by contributing across states, dialects, accents, gender and age group. The magnitude of this diversity across the nation, gives us collective strength in empowering our languages.": "The key to building speech recognition models, lies in the diversity of the data that you provide by contributing across states, dialects, accents, gender and age group. The magnitude of this diversity across the nation, gives us collective strength in empowering our languages.",
+	"languages contributed": "languages contributed",
+	"speakers contributed": "speakers contributed",
+	"hours recorded": "hours recorded",
+	"Top Languages": "Top Languages",
+	"By hours of data contributed": "By hours of data contributed",
+	"By number of speakers": "By number of speakers",
+	"VIEW ALL DETAILS": "VIEW ALL DETAILS",
+	"Speaker Details": "Speaker Details",
+	"All the fields are optional": "All the fields are optional",
+	"Not You? Change User": "Not You? Change User",
+	"Username": "Username",
+	"Enter preferred username": "Enter preferred username",
+	"Username cannot be more than 12 characters": "Username cannot be more than 12 characters",
+	"Please don't use email or mobile number as user name": "Please don't use email or mobile number as user name",
+	"Mother Tongue": "Mother Tongue",
+	"Select Mother Tongue": "Select Mother Tongue",
+	"Age Group": "Age Group",
+	"Select Age Group": "Select Age Group",
+	"Gender": "Gender",
+	"Male": "Male",
+	"Female": "Female",
+	"Others": "Others",
+	"I have read and agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions </a>": "I have read and agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions </a>",
+	"LET'S GO": "LET'S GO",
+	"Hide details": "Hide details",
+	"Select Your Preferred Language": "Select Your Preferred Language",
+	"Terms & Conditions": "Terms & Conditions",
+	"Privacy Policy": "Privacy Policy",
+	"Let's get started!": "Let's get started!",
+	"Recording will automatically stop after <span id=\"counter\"></span> seconds": "Recording will automatically stop after <span id=\"counter\"></span> seconds",
+	"Audio recording is too small. Please Re-record": "Audio recording is too small. Please Re-record",
+	"SKIP": "SKIP",
+	"START RECORDING": "START RECORDING",
+	"STOP RECORDING": "STOP RECORDING",
+	"RE-RECORD": "RE-RECORD",
+	"NEXT": "NEXT",
+	"Recording Instructions": "Recording Instructions",
+	"Please test your <b>microphone</b>": "Please test your <b>microphone</b>",
+	"Please test your <b>speakers</b>": "Please test your <b>speakers</b>",
+	"Ensure there is <b>no background noise</b>": "Ensure there is <b>no background noise</b>",
+	"Get comfortable with the prompted text, before recording, by <b>reading it aloud</b>": "Get comfortable with the prompted text, before recording, by <b>reading it aloud</b>",
+	"Get started by clicking on <b>Record</b> button": "Get started by clicking on <b>Record</b> button",
+	"START": "START",
+	"Error!!!": "Error!!!",
+	"An unexpected error occured while processing your request. Please try after some time.": "An unexpected error occured while processing your request. Please try after some time.",
+	"Close": "Close",
+	"An open data strategy will enable the various language communities, individuals and technologists, who are passionate about their language, to develop speech recognition applications, and integrate them in various domains for the good of the community.": "An open data strategy will enable the various language communities, individuals and technologists, who are passionate about their language, to develop speech recognition applications, and integrate them in various domains for the good of the community.",
+	"Our multilingual DNA is still a missing piece in digital first strategy": "Our multilingual DNA is still a missing piece in digital first strategy",
+	"India being a vast multilingual country, 90% of India’s population relies on regional languages to conduct their educational, social & digital activities.": "India being a vast multilingual country, 90% of India’s population relies on regional languages to conduct their educational, social & digital activities.",
+	"As the volume of internet users multiplies and there is a demand to access digital platforms for financial, educational and economic activities, there is a need to start thinking Indian languages first.": "As the volume of internet users multiplies and there is a demand to access digital platforms for financial, educational and economic activities, there is a need to start thinking Indian languages first.",
+	"Winning back our languages by introducing localization in our ecosystem": "Winning back our languages by introducing localization in our ecosystem",
+	"There is a felt need for a speech recognition technology that specializes in Indian languages, that meets a high accuracy bar and is closer to the daily language and communication functions of users of diverse Indian languages.": "There is a felt need for a speech recognition technology that specializes in Indian languages, that meets a high accuracy bar and is closer to the daily language and communication functions of users of diverse Indian languages.",
+	"Speech recognition is a technology that converts speech to real-time text. Such a model for Indian languages has the potential to become a building block to a digital first model, in various sectors, such as, education, healthcare and media.": "Speech recognition is a technology that converts speech to real-time text. Such a model for Indian languages has the potential to become a building block to a digital first model, in various sectors, such as, education, healthcare and media.",
+	"The tools, utilities and models proposed to be developed will rely on open source contributions through Vakyansh crowd sourcing platform.": "The tools, utilities and models proposed to be developed will rely on open source contributions through Vakyansh crowd sourcing platform.",
+	"Crowd Sourcing & your contribution": "Crowd Sourcing & your contribution",
+	"Speech recognition relies on \"machine-learning\" technology that requires huge collections of datasets that include diversified Indian voices and the corresponding text. Through Vakyansh, EkStep wants to create a diverse open repository of Indian voice speaking Indian language which can be used for this initiative.": "Speech recognition relies on \"machine-learning\" technology that requires huge collections of datasets that include diversified Indian voices and the corresponding text. Through Vakyansh, EkStep wants to create a diverse open repository of Indian voice speaking Indian language which can be used for this initiative.",
+	"This is where you come in.": "This is where you come in.",
+	"As a team, we are inviting you to join us and contribute upto 30 minutes of your voice to this initiative. Recording your voice at one stretch might be overwhelming and hence, we have created leaner measures on our website, for you to visit us multiple times and commence from where you left us off.": "As a team, we are inviting you to join us and contribute upto 30 minutes of your voice to this initiative. Recording your voice at one stretch might be overwhelming and hence, we have created leaner measures on our website, for you to visit us multiple times and commence from where you left us off.",
+	"Every minute of your contribution will make a huge difference and bring us closer to our objective.": "Every minute of your contribution will make a huge difference and bring us closer to our objective.",
+	"Select language": "Select language",
+	"ABOUT THE ORGANISATION": "ABOUT THE ORGANISATION",
+	"EkStep Foundation": "EkStep Foundation",
+	"EkStep Foundation gathers partners and creates open infrastructure, tools and frameworks to solve complex societal problems at scale. We do this by leveraging the open source digital infrastructure we have created called Sunbird and by following a way of thinking and doing called the Societal Platform Approach.": "EkStep Foundation gathers partners and creates open infrastructure, tools and frameworks to solve complex societal problems at scale. We do this by leveraging the open source digital infrastructure we have created called Sunbird and by following a way of thinking and doing called the Societal Platform Approach.",
+	"EkStep is a not-for-profit organization founded by Rohini and Nandan Nilekani and Shankar Maruwada.": "EkStep is a not-for-profit organization founded by Rohini and Nandan Nilekani and Shankar Maruwada.",
+	"Thank you for contributing!": "Thank you for contributing!",
+	"You have contributed <b><span id=\"user-contribution\"></span></b><b><span> recordings</span></b> of your voice": "You have contributed <b><span id=\"user-contribution\"></span></b><b><span> recordings</span></b> of your voice",
+	"We know you can do more!": "We know you can do more!",
+	"Contribute More": "Contribute More",
+	"Share it with your friends and family": "Share it with your friends and family",
+	"Select the language": "Select the language",
+	"All Languages": "All Languages",
+	"Data Last Updated": "Data Last Updated",
+	"We do not have any data for this language, would you like to contribute for it?": "We do not have any data for this language, would you like to contribute for it?",
+	"Contribute Now": "Contribute Now",
+	"hours validated": "hours validated",
+	"Progress Chart": "Progress Chart",
+	"Monthly": "Monthly",
+	"Quarterly": "Quarterly",
+	"Gender Contribution": "Gender Contribution",
+	"State Wise distribution": "State Wise distribution",
+	"Age Group Distribution": "Age Group Distribution"
+}
