|Soujyo| Logical update of Santali DV localization

--- a/locales/satdv.json
+++ b/locales/satdv.json
@@ -1,1 +1,122 @@
-{}
+{
+	"hrs recorded in": "%hours टाड़ाङ: ध्वनिमुद्रिता: %language रे बाताव एम",
+	"hrs validated in": "%hours टाड़ाङ: प्रमाणीकृता: %language रे बाताव एमाकाना",
+	"Language": "Language",
+	"Speech Recognition Models": "Speech Recognition Models",
+	"About Us": "आले बाबोत ते",
+	"Select the language for contribution": "एनेम ला़गित् पा़रसी बाछाव मे",
+	"Show All": "Show All",
+	"Say": "मेन मे",
+	"Contribute Your Voice": "आमाक् साडे एम मे",
+	"Contribute your voice to create an open data repository of Indian languages": "भारोतीय पा़रसी को रेयाक् मित् झिज डाटा भांडार तेयार ला़गित् आमाक् साडे आड़ाङ एम मे",
+	"Listen": "आंजोम मे",
+	"Verify What They Say": "बाताव एम मे ओका उनी मेनेत् आ",
+	"Help us by validating the voice samples that others have contributed": "ओना साडे ना़मुना को बाताव एम रे आले गोड़ोवाले मे ओका एटाक् कोको एमाकात् आ",
+	"Vakyansh: A crowdsourcing initiative for Indian languages": "बाकयांस: भारोतीय पा़रसी को ला़गित् मित् क्राउडसोर्सिंग एतोहोब मे",
+	"For the development of speech recognition models in Indian languages, there is a need for an open data repository of diversified Indian voices. Vakyansh invites you to reach out and contribute your voice to create a diverse open data repository of Indian voices.": "भारोतीय पा़रसी कोरे रोड़ चिनहा़व मोडेल को रेयाक् लाहानती ला़गित्, भेनेगार भारोतीय साडे को रेयाक् मित् झिज डाटा भांडार लागित् ला़कतीया। बाकयांस आम भारोतीय साडे को रेयाक् भेनेगार झिज डाटा भांडार तेयार ला़गित् आमाक् साडे आड़ाङ हा़बिज सेटेर आर एनेम ला़गित् नेवता येत् मेया।",
+	"Know More": "बा़ड़ती बाडाय मे",
+	"We rely on your contributions": "आले आमाक् एनेम रे बोरसा ले दोहोया",
+	"The key to building speech recognition models, lies in the diversity of the data that you provide by contributing across states, dialects, accents, gender and age group. The magnitude of this diversity across the nation, gives us collective strength in empowering our languages.": "रोड़ चिनहा़ मोडेल तेयार ला़गित् का़ठी, ओना डाटा रेयाक् भेनेगार रे मेनाक् आ ओका आम गोटा पोनोत, रोड़ को, मेन को, जानाङ आर उमेर दोल एनेम काते एमोक् आ। दिसोम भितिर रे नोवा भेनेगार रेयाक् कुड़ा़य तेद, आबो आबोवाक् पा़रसी को दा़ड़े तेयार रे गादेल दाड़े एमाबोवा।",
+	"languages contributed": "पा़रसी को एम आकात् ",
+	"speakers contributed": "रोरोड़ कोको एम आकात्",
+	"hours recorded": "टाड़ाङ हा़बिज रेकोर्ड आकाना",
+	"Top Languages": "चेतान पा़रसी को",
+	"By hours of data contributed": "टाड़ाङ को रेयाक् डाटा एम आकात् आ",
+	"By number of speakers": "रोरोड़ कोवाक् लेखा लेकाते ",
+	"VIEW ALL DETAILS": "जोतो बिबरोन को ञेल",
+	"Speaker Details": "रोरोड़ कोवाक् बिबरोन",
+	"All the fields are optional": "जोतो जायगा को आपनार मोने तेयाक्",
+	"Not You? Change User": "आम दो बाङ?  बोभारिज बोदोल",
+	"Username": "बेभारिजाक् ञुतुम",
+	"Enter preferred username": "कुसियाक् बेभारिजाक् ञुतुम आदेर मे",
+	"Username cannot be more than 12 characters": "बेभारिजाक् ञुतुम दो 12 आखोर खोन बाड़ती बाय ताहें दाड़ेयाक् आ",
+	"Please don't use email or mobile number as user name": "Please don't use email or mobile number as user name",
+	"Mother Tongue": "गो पा़रसी",
+	"Select Mother Tongue": "गो पा़रसी बाछाव मे",
+	"Age Group": "उमेर दोल",
+	"Select Age Group": "उमेर द्ल बाछाव मे",
+	"Gender": "जानाङ",
+	"Male": "हेरेल",
+	"Female": "तिरला",
+	"Others": "एटाक् को",
+	"I have read and agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions </a>": "I have read and agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions </a>",
+	"LET'S GO": "देलाबो चालाक् आ",
+	"Hide details": "Hide details",
+	"Select Your Preferred Language": "आमाक् कुसियाक् पा़रसि बाछाव मे",
+	"Terms & Conditions": "नियोम आर सा़रती को",
+	"Privacy Policy": "निजेराक् निती",
+	"Select the language": "मित् पा़रसी बाछाव मे",
+	"All Languages": "जोतो पा़रसी को",
+	"Data Last Updated": "डाटा मुचाद रे हा़ली",
+	"We do not have any data for this language, would you like to contribute for it?": "We do not have any data for this language, would you like to contribute for it?",
+	"Contribute Now": "Contribute Now",
+	"hours validated": "बाताव एम टाड़ांङ को",
+	"Progress Chart": "लाहा़वाक् टाइमलाइन",
+	"Monthly": "Monthly",
+	"Quarterly": "Quarterly",
+	"Gender Contribution": "जानाङ एनेम",
+	"State Wise distribution": "जिला लेका ते बोरनोन",
+	"Age Group Distribution": "जिला लेका ते बोरनोन",
+	"An open data strategy will enable the various language communities, individuals and technologists, who are passionate about their language, to develop speech recognition applications, and integrate them in various domains for the good of the community.": "मित् झिज डाटा नीति भेनेगार पा़रसी बिरा़द को, होड़ आर सांड़ेस गा़खुड़ को हुय होचो तेयारा, ओकोय को  आकोवाक् पा़रसी बाबोत ते भाबनाक् आ, रोड़ चिनहा़व एपलिकेसोन लाहाय ला़गित्, आर बिरा़द कोवाक् बेस ला़गित् उन कु भेनेगार जायगा को रे जुमित् जारवा कोवा।",
+	"Our multilingual DNA is still a missing piece in digital first strategy": "आबोवाक् आ़डी लेकान पा़रसी डि. एन. ए. दो नित हों डिजिटाल पा़हिल निती रे  मित्  आद आकान घांडिज काना",
+	"India being a vast multilingual country, 90% of India’s population relies on regional languages to conduct their educational, social & digital activities.": "भारोत मित् माराङ आ़डी लेकान पा़रसी यानाक् दिसोम काना, भारोत रेयाक्, 90% होड़ लेखा आकोवाक्  सिखनात, सांवता आर डिजिटाल चोगोड़ को चालाव ला़गित् नोडेनाक् पा़रसी को रे ताबे ताहेंनाl",
+	"As the volume of internet users multiplies and there is a demand to access digital platforms for financial, educational and economic activities, there is a need to start thinking Indian languages first.": "जाहां लेका इनटार नेट बेभार कोवाक् लेखा बाड़हाव इदी काना आर बितिया, सिखनात आर ओरथो आर जाव चोगोड़ को ला़गित्  डिजिटाल प्लेटफोर्म हाबिज सेटेरोक् रेयाक् कोइजोंग मेनाक् आ, पा़हिल भारोतियो पा़रसी को रे उयहा़र एहोब होचो रेयाक् ला़कतीया।",
+	"Winning back our languages by introducing localization in our ecosystem": "आबोवाक् पोरिसथिती तोंत्रो रे नोडेनाक् लाइ सोदोर दाराय ते आबोवाक् पा़रसी को दोहड़ा जिताव ञाम",
+	"There is a felt need for a speech recognition technology that specializes in Indian languages, that meets a high accuracy bar and is closer to the daily language and communication functions of users of diverse Indian languages.": "मित् रोड़ हेपरा चिनहा़व प्रोदोगिकी रेयाक् ला़कती ठिकाक् काना ओका  भारोत रेयाक् पा़रसी को रे आ़डी बिसेस मेनाक् आ,  ओका मित्  चेतान  निफुट बार सांव मिलाक् आ आर भेनेगार भारोतिया पा़रसी को रेयाक् बेबोहार कोवाक्  दिनाम पा़रसी आर सांचार का़मी को रेयाक् सुर रे मेनाक् आ।",
+	"Speech recognition is a technology that converts speech to real-time text. Such a model for Indian languages has the potential to become a building block to a digital first model, in various sectors, such as, education, healthcare and media.": "रोड़ चिन्हा़ दो मित् प्रोद्योगिकी काना ओका रोड़ को  सा़री ओकतो ओनोल रे बोदोला। जे लेका भारोतियो पा़रसी को ला़गित् मित् मोडेल  दो मित् डिजिटाल पा़हिल मोडेल ला़गित् बिलडिंग बोलोक तेयार रेयाक् खेमोता मेनाक् आ, आ़डी लेकान जायगा को रे, जे लेका सिखनात, पोहलांग ञेल आर मिडिया लेका।",
+	"The tools, utilities and models proposed to be developed will rely on open source contributions through Vakyansh crowd sourcing platform.": "लाहा होचोवाक् टुल्स, बेबोहार लाभ आर मोडेल प्रोसताव दो वाक्यांस क्राउड सोरसिंग प्लेटफोर्म सेत् ते झिज सोत एनेम को रे बोरसाया।",
+	"Crowd Sourcing & your contribution": "क्राउड सोरसिंग आर आमाक् एनेम",
+	"Speech recognition relies on \"machine-learning\" technology that requires huge collections of datasets that include diversified Indian voices and the corresponding text. Through Vakyansh, EkStep wants to create a diverse open repository of Indian voice speaking Indian language which can be used for this initiative.": "रोड़ चिन्हाव दो \"मिसिन-लार्निंग\" प्रोदोगिकी रे  बोरसाया ओका रे डाटा सेट रेयाक् माराङ तुमाल जारवा को रेयाक् ला़कती हुयुक् आ ओका रे भेनेगार भारोतियो साडे को आर रोड़ रुवा़ड़ ओनोल को सा़मिल मेनाक् आ। वाक्यांस, एक एस्टेप सेत् ते मित् भारोतियो साडे रेयाक्  मित् भेनेगार मित् भानडार तेयार सानाय भारोतियो पा़रसी रोड़ ला़गित् ओका दो नोवा एतेहोब ला़गित् बेबोहार दाड़ेयाक् आ।",
+	"This is where you come in.": "नोवा दो ओना जायगा काना ओका रे आम हिजुक् आ",
+	"As a team, we are inviting you to join us and contribute upto 30 minutes of your voice to this initiative. Recording your voice at one stretch might be overwhelming and hence, we have created leaner measures on our website, for you to visit us multiple times and commence from where you left us off.": "मित् टिम लेका ते, आम आले सांव खोंजा ला़गित् नेवतायेतमेया आर नोवा एतोहोब ला़गित् 30 टिपिच् हा़बिज आमाक् साडे रेयाक् एनेम एमयेद आ। मित् एसट्रेच रे  आमाक्  साडे रेकोर्डिंग दो आ़डी हामाल हुय दाड़ेयाक् आ आर ओना ते, आले आलेयाक् वेबसाइट रे चेचेद कोवाक् माप तेयाराक् आकाद आ, आले आ़डीगान ओकतो रे आम ञेल ला़गित् आर जाहां खोन आम आले बागियाक् लेत ताहेंना ओंडे खोन एहोब मे",
+	"Every minute of your contribution will make a huge difference and bring us closer to our objective.": "आमाक् एनेम रेयाक् जोतो टिपिच् दो मित् माराङ भेनेगार तेयारा आर आबो आबोवाक् उदेस रेयाक् सुर आगुबोना",
+	"Select language": "मित् पा़रसी बाछाव मे",
+	"START RECORDING": "रेकोर्डिंग एहोब मे",
+	"ABOUT THE ORGANISATION": "सोंस्था बाबोत ते",
+	"EkStep Foundation": "एक एस्टेप फाउंडेसान",
+	"EkStep Foundation gathers partners and creates open infrastructure, tools and frameworks to solve complex societal problems at scale. We do this by leveraging the open source digital infrastructure we have created called Sunbird and by following a way of thinking and doing called the Societal Platform Approach.": "एकएसटेप फाउंडेसान भागारी को जारवाया आर झिज बुनियादी तेयार, टुल्स आर फ्रेमवार्क को तेयार माराङ सांवता दिगधा को रेयाक् सा़त होचो ला़गित्  तेयारा। आबो नोंका का़मी ला़गित् ओपेन सोर्स डिजिटाल  बुनियाद तेयार  रेयाक्  लाभ हातावाक् ओका सानबार्ड बो मेतागाक् आ आर सांवता रेयाक् प्लेटफोर्म सेटेर ञुतुमाक् हुदिस आर का़मी लेकाते पांजाया",
+	"EkStep is a not-for-profit organization founded by Rohini and Nandan Nilekani and Shankar Maruwada.": "एकस्टेप दो मित् बाङ लाभ ञामाक् सोंस्था काना ओका रोहिनी आर नोन्दोन निलेकानी आर  सोंकोर मारुवाडा दाराय ते थापोन लेन ताहेंना।",
+	"Let's get started!": "देला एहोब मे!",
+	"Recording will automatically stop after <span id=\"counter\"></span> seconds": "Recording will automatically stop after <span id=\"counter\"></span> seconds",
+	"Audio recording is too small. Please Re-record": "Audio recording is too small. Please Re-record",
+	"SKIP": "आड़ाक् काक् मे",
+	"STOP RECORDING": "रेकोर्डिंग तिंगुय मे",
+	"RE-RECORD": "दोहड़ा-रेकोर्ड मे",
+	"NEXT": "इना तायोम",
+	"Recording Instructions": "रेकोर्डिंग को लाइ उदुक् ",
+	"Please test your <b>microphone</b>": "दाया काते आमाक्  <b>माइकरोफोन</b> ञेल मे ",
+	"Please test your <b>speakers</b>": "दाया काते आमाक् <b>इसपिकार</b>  ञेल मे",
+	"Ensure there is <b>no background noise</b>": "निसटाय मे जे नोडे जाहांन ओनोड़ <b>साडे को बा़नुक् आ</b>",
+	"Get comfortable with the prompted text, before recording, by <b>reading it aloud</b>": "एमाकान ओनोल सांव आलगा ञाम मे, रेकोर्डिंग माड़ाङ, जुर <b>ते पाड़हाव दाराय ते </b>",
+	"Get started by clicking on <b>Record</b> button": "रेकोर्ड बुता़म रे ओता काते <b>एहोब</b> ञाम मे ",
+	"START": "एहोब",
+	"Error!!!": "भुल!!!",
+	"An unexpected error occured while processing your request. Please try after some time.": "आमाक् नेहोर का़मी जोहोक् मित् बाङ आंसाक् भुल ञामयेना। दायाकाते का़च् ओकतो तायोम कुरुमुटुय मे।",
+	"Close": "बोंदो",
+	"Thank you for contributing!": "एनेम ला़गित् आम सारहाव!",
+	"You have contributed <b><span id=\"user-contribution\"></span></b><b><span> recordings</span></b> of your voice": "You have contributed <b><span id=\"user-contribution\"></span></b><b><span> recordings</span></b> of your voice",
+	"We know you can do more!": "आले ले बाडाया आम आर बाड़ती का़मी दाड़ेयाक्!",
+	"Contribute More": "बाड़ती एम मे",
+	"Share it with your friends and family": "ओना आम रिन गाते आर घारोंज को सांव हा़टिञ मे ",
+	"Terms and Conditions": "ियोम आर सा़रती को",
+	"Terms of Use": "Terms of Use",
+	"Copyright & Licensing Notice": "Copyright & Licensing Notice",
+	"Instructions": "Instructions",
+	"Thank you for your enthusiasm to validate the voice samples": "साडे रेयाक् नामुना को बाताव एम ला़गित् आमाक् उसका़व ला़गित् सारहाव।",
+	"We have recently commenced the data contribution journey for <span id=\"spn-validation-language\"></span> language and hope that very soon there will be voice samples collected for your validation.": "We have recently commenced the data contribution journey for <span id=\"spn-validation-language\"></span> language and hope that very soon there will be voice samples collected for your validation.",
+	"Would you also like to contribute your voice?": "Would you also like to contribute your voice?",
+	"Start Contributing": "एनेम एम एहोब मे",
+	"Thank you for validating!": "बाताव एम ला़गित् आम सारहाव!",
+	"You have helped us validate <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> recordings": "आम आले <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> recordings",
+	"Validate More": "बाड़ती बाताव एमाक्",
+	"Incorrect": "Incorrect",
+	"Play": "चालु",
+	"Replay": "दोहड़ा- चालु",
+	"Pause": "Pause",
+	"Correct": "Correct",
+	"Skip": "आड़ाक् काक् मे",
+	"Validating Instructions": "बाताव एम लाइ उदुक्",
+	"Ensure the voice is <b>clear and audible</b>": "निसटाय मे साडे दो <b>फारचा आर आंजोम</b> दाड़ेयाक् काना",
+	"Match the voice to the text <b>accurately</b>": "ओनोल रे साडे <b>सुही</b> मिलाव मे",
+	"If you are unsure of the match, skip the particular voice sample": "जुदी आम मिलाव बाम निससटाया, बिसेस साडे नामुना आड़ाक् काक् मे"
+}
