--- a/locales/kd.json
+++ b/locales/kd.json
@@ -1,7 +1,7 @@
 {
 	"Language": "Language",
 	"Speech Recognition Models": "Speech Recognition Models",
-	"About Us": "About Us",
+	"About Us": "आमचेविशीं",
 	"Select the language for contribution": "Select the language for contribution",
 	"Show All": "Show All",
 	"Say": "म्हणात", 
@@ -22,39 +22,39 @@
 	"By hours of data contributed": "योगदान दिल्ली माहिती वरांनी",
 	"By number of speakers": "उलोवप्यांच्या संख्येप्रमाण",
 	"VIEW ALL DETAILS": "सगळो तपशील पळयात",
-	"Speaker Details": "Speaker Details",
-	"All the fields are optional": "All the fields are optional",
-	"Not You? Change User": "Not You? Change User",
-	"Username": "Username",
-	"Enter preferred username": "Enter preferred username",
-	"Username cannot be more than 12 characters": "Username cannot be more than 12 characters",
-	"Please don't use email or mobile number as user name": "Please don't use email or mobile number as user name",
-	"Mother Tongue": "Mother Tongue",
-	"Select Mother Tongue": "Select Mother Tongue",
-	"Age Group": "Age Group",
-	"Select Age Group": "Select Age Group",
-	"Gender": "Gender",
-	"Male": "Male",
-	"Female": "Female",
-	"Others": "Others",
+	"Speaker Details": "उलोवप्याची माहिती",
+	"All the fields are optional": "सगळे जागे वैकल्पिक आसात",
+	"Not You? Change User": "तुम्ही न्ही? वापरपी बदलात",
+	"Username": "वापरपी",
+	"Enter preferred username": "जाय आशिल्ले वापरप्याले नाव घालात",
+	"Username cannot be more than 12 characters": "वापरप्याले नाव 12 अक्षरांपरस चड आसपाक शकना.",
+	"Please don't use email or mobile number as user name": "वापरप्याले नाव ईमेल नामो वो मोबायल नंबर आसपाक शकना.",
+	"Mother Tongue": "मायभास",
+	"Select Mother Tongue": "मायभास निवडात",
+	"Age Group": "वयोगट",
+	"Select Age Group": "वयोगट निवडात",
+	"Gender": "लिंग",
+	"Male": "दादलो",
+	"Female": "बायल",
+	"Others": "हेर",
 	"I have read and agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions </a>": "I have read and agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions </a>",
-	"LET'S GO": "LET'S GO",
+	"LET'S GO": "चला वचूया",
 	"Hide details": "तपशील लिपयात",
-	"Select Your Preferred Language": "Select Your Preferred Language",
-	"Terms & Conditions": "Terms & Conditions",
-	"Privacy Policy": "Privacy Policy",
-	"Select the language": "Select the language",
+	"Select Your Preferred Language": "तुमची प्राधान्याची भास निवडात",
+	"Terms & Conditions": "अटी आणी शर्ती",
+	"Privacy Policy": "वैयक्तिक धोरण",
+	"Select the language": "भास निवडात",
 	"All Languages": "All Languages",
-	"Data Last Updated": "Data Last Updated",
+	"Data Last Updated": "निमणी सुदारिल्ली माहिती",
 	"We do not have any data for this language, would you like to contribute for it?": "We do not have any data for this language, would you like to contribute for it?",
 	"Contribute Now": "Contribute Now",
 	"hours validated": "hours validated",
 	"Progress Chart": "Progress Chart",
 	"Monthly": "Monthly",
 	"Quarterly": "Quarterly",
-	"Gender Contribution": "Gender Contribution",
-	"State Wise distribution": "State Wise distribution",
-	"Age Group Distribution": "Age Group Distribution",
+	"Gender Contribution": "लिंग योगदान",
+	"State Wise distribution": "राज्यवार वितरण",
+	"Age Group Distribution": "वयोगट वितरण",
 	"An open data strategy will enable the various language communities, individuals and technologists, who are passionate about their language, to develop speech recognition applications, and integrate them in various domains for the good of the community.": "मुक्त माहितीसाठो धोरण आपापल्या भाशेविशी ध्येयवादी आशिल्ल्या विंगडविंगड भाशा समूहांक, व्यक्ती आणि तंत्रज्ञांक आवाज वळखुपी अनुप्रयोग विकसित करपाक, आणी समाजाच्या बऱ्याखातीर विंगडविंगड डोमेन्सांनी तांची एकात्मताय साधपाक सक्षम करतले.",
 	"Our multilingual DNA is still a missing piece in digital first strategy": "डिजिटल पयली धोरणांत आमचौ भौभाशिक डीएनए अजून अस्तित्वांत ना",
 	"India being a vast multilingual country, 90% of India’s population relies on regional languages to conduct their educational, social & digital activities.": "भारत हो एक भौभाशिक देश आशिल्ल्यान, भारताची 90 टक्के लोकसंख्या ही तांची शैक्षणिक, सामाजिक आणि डिजिटल कामा करपाखातीर प्रादेशिक भाशांचेर अवलंबून रावता.",
@@ -82,20 +82,20 @@
 	"RE-RECORD": "परतून ध्वनिमुद्रण",
 	"NEXT": "मुखार",
 	"Recording Instructions": "ध्वनिमुद्रण सूचना",
-	"Please test your <b>microphone</b>": "Please test your <b>microphone</b>",
-	"Please test your <b>speakers</b>": "Please test your <b>speakers</b>",
-	"Ensure there is <b>no background noise</b>": "Ensure there is <b>no background noise</b>",
-	"Get comfortable with the prompted text, before recording, by <b>reading it aloud</b>": "Get comfortable with the prompted text, before recording, by <b>reading it aloud</b>",
-	"Get started by clicking on <b>Record</b> button": "Get started by clicking on <b>Record</b> button",
+	"Please test your <b>microphone</b>": "तुमच्या मायक्रोफोनाची चाचणी घेयात",
+	"Please test your <b>speakers</b>": "तुमच्या स्पीकर्सची चाचणी घेयात",
+	"Ensure there is <b>no background noise</b>": "फाटल्यान बोवाळ ना हाची खात्री करून घेयात",
+	"Get comfortable with the prompted text, before recording, by <b>reading it aloud</b>": "व्हडल्यान वाचून ध्वनिमुद्रण",
+	"Get started by clicking on <b>Record</b> button": "ध्वनिमुद्रण बटनार क्लीक करून सूरू करात",
 	"START": "START",
 	"Error!!!": "चुकले!!!",
 	"An unexpected error occured while processing your request. Please try after some time.": "तुमच्या विनंतेचेर प्रक्रिया करतास्तना अनपेक्षित चूक घडली. उपकार करून काय वेळांत परतून यत्न करात.",
 	"Close": "बंद करात",
 	"Instructions": "Instructions",
-	"Thank you for your enthusiasm to validate the voice samples": "Thank you for your enthusiasm to validate the voice samples",
-	"We have recently commenced the data contribution journey for <span id=\"spn-validation-language\"></span> language and hope that very soon there will be voice samples collected for your validation.": "We have recently commenced the data contribution journey for <span id=\"spn-validation-language\"></span> language and hope that very soon there will be voice samples collected for your validation.",
-	"Would you also like to contribute your voice?": "Would you also like to contribute your voice?",
-	"Start Contributing": "Start Contributing",
+	"Thank you for your enthusiasm to validate the voice samples": "आवाज नमुने वैध करपाखातीरच्या तुमच्या उत्साहाबद्दल उपकारी. ",
+	"We have recently commenced the data contribution journey for <span id=\"spn-validation-language\"></span> language and hope that very soon there will be voice samples collected for your validation.": "आमी हालींच <span id=\"spn-validation-language\"></span> भाशेखातीर माहिती योगदान प्रवास सुरू केला आणी तुमच्या वैधतायेखातीर रोखडेच आवाजाचे नमुने मेळटले अशी आस्त बाळगिता.",
+	"Would you also like to contribute your voice?": "तुमी तुमच्या आवाजाचे योगदानूय दिवपाक सोदता?",
+	"Start Contributing": "योगदान दिवपाक सुरवात करात",
 	"Thank you for validating!": "वैध केल्याबद्दल देव बरे करू",
 	"You have helped us validate <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> recordings": "You have helped us validate <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> recordings",
 	"Validate More": "आणीक वैध करात",
@@ -106,8 +106,8 @@
 	"Correct": "Correct",
 	"Skip": "सोडून दियात",
 	"Validating Instructions": "वैध करपासंबंधी सूचना",
-	"Ensure the voice is <b>clear and audible</b>": "Ensure the voice is <b>clear and audible</b>",
-	"Match the voice to the text <b>accurately</b>": "Match the voice to the text <b>accurately</b>",
+	"Ensure the voice is <b>clear and audible</b>": "तुमचो आवाज स्पष्ट आणी आयकुपाक येता हे पळयात",
+	"Match the voice to the text <b>accurately</b>": "मजकुराकडेन तुमचो आवाज अचुकतायेन जुळयात",
 	"If you are unsure of the match, skip the particular voice sample": "If you are unsure of the match, skip the particular voice sample",
 	"Thank you for contributing!": "योगदान दिल्याबद्दल उपकारी!",
 	"You have contributed <b><span id=\"user-contribution\"></span></b><b><span> recordings</span></b> of your voice": "You have contributed <b><span id=\"user-contribution\"></span></b><b><span> recordings</span></b> of your voice",
